<resources>
    <string name="app_name">WomenSafe</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="women_safe_app">Women Safe App</string>
    <string name="already_registered_login_here">Already Registered ? Login here</string>
    <string name="register">Register</string>
    <string name="create_new_account">Create New Account</string>
    <string name="Not_registered_create_new_account" />
    <string name="login">Login</string>
    <string name="not_registeres_create_account">Not registeres ? create account</string>
    <string name="not_registered_create_account" />
    <string name="welcome_you_to_our_app">Welcome you to our app</string>
    <string name="log_out">Log Out</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_name_of_person1">Enter name of person1</string>
    <string name="enter_first_person_name">enter first person name</string>
    <string name="enter_contact_number">enter contact number</string>
    <string name="enter_second_person_name">enter second person name</string>
    <string name="enter_contact_number_2">enter contact number 2</string>
    <string name="enter_third_person_name">enter third person name</string>
    <string name="enter_contact_number_3">enter contact number 3</string>
    <string name="enter_name_of_fourth_person">enter name of fourth person</string>
    <string name="enter_contact_number_4">enter contact number 4</string>
    <string name="enter_emergency_contact_number_1">Enter emergency contact number 1:</string>
    <string name="enter_emergency_contact_number_2">Enter emergency contact number 2:</string>
    <string name="enter_emergency_contact_number_3">Enter emergency contact number 3:</string>
    <string name="enter_emergency_contact_number_4">Enter emergency contact number 4:</string>
    <string name="enter_emergency_contact_number_5">Enter emergency contact number 5:</string>
    <string name="add_details">Add Details</string>
    <string name="enter_user_name">Enter user name:</string>
    <string name="edit_details">Edit Details</string>
    <string name="update_details">Update Details</string>
    <string name="scream">Scream</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="call">call</string>
    <string name="message">message</string>
</resources>